...
        'motorcycleId': serviceHistory.first.motorcycleId,
        'complaint': complaintController.text,
      });
      if (response.isOk) {
        Get.back();
        CustomModal.showSuccessDialog(
          title: 'Klaim Garansi Berhasil',
          message: 'Klaim garansi Anda telah berhasil diajukan.',
        );
      } else {
        CustomModal.showErrorDialog(
          title: 'Klaim Garansi Gagal',
          message:
...
